[gd_scene load_steps=13 format=3 uid="uid://bhqj7m30rgxue"]

[ext_resource type="Script" uid="uid://b3y1nlahcr6ti" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="SystemFont" uid="uid://d12m2ku4rafy7" path="res://main_font.tres" id="2_0xm2m"]
[ext_resource type="Script" uid="uid://njh81gydvmci" path="res://slider.gd" id="3_1bvp3"]
[ext_resource type="Script" uid="uid://uuegq1shspsj" path="res://file_selector.gd" id="3_h2yge"]
[ext_resource type="AudioStream" uid="uid://cut4ogn2f28bd" path="res://Abstract1.wav" id="4_lquwl"]
[ext_resource type="AudioStream" uid="uid://dj50rsvpkw7di" path="res://Minimalist11.wav" id="6_7mycd"]

[sub_resource type="SystemFont" id="SystemFont_1bvp3"]
font_names = PackedStringArray("Britannic")
font_weight = 600

[sub_resource type="SystemFont" id="SystemFont_lquwl"]
font_names = PackedStringArray("Segoe UI")
font_italic = true

[sub_resource type="SystemFont" id="SystemFont_7mycd"]
font_names = PackedStringArray("Segoe UI")
font_italic = true

[sub_resource type="Animation" id="Animation_272bh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Sending"]
}

[sub_resource type="Animation" id="Animation_7mycd"]
resource_name = "sending"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": ["Sending", "Sending.", "Sending..", "Sending..."]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5vw27"]
_data = {
&"RESET": SubResource("Animation_272bh"),
&"sending": SubResource("Animation_7mycd")
}

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ig7tw")
Months = 4
metadata/_edit_use_anchors_ = true

[node name="BgColor" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12941177, 0.14901961, 0.18039216, 1)

[node name="Question" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.0
offset_top = -155.0
offset_right = 180.0
offset_bottom = -86.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_0xm2m")
theme_override_fonts/italics_font = SubResource("SystemFont_1bvp3")
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/italics_font_size = 32
bbcode_enabled = true
text = "[u]When[/u] would you like to mail this letter to?"
fit_content = true
scroll_active = false
autowrap_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Selection" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -43.0
offset_right = 129.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="MonthsL" type="Label" parent="Selection"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0xm2m")
theme_override_font_sizes/font_size = 24
text = "Months"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MonthSlider" type="HSlider" parent="Selection"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_vertical = 2
max_value = 11.0
tick_count = 12
ticks_on_borders = true
script = ExtResource("3_1bvp3")

[node name="NumL" type="Label" parent="Selection/MonthSlider"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -36.0
offset_right = 19.0
offset_bottom = -13.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_0xm2m")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Selection/MonthSlider"]
stream = ExtResource("4_lquwl")
bus = &"sfx"

[node name="YearsL" type="Label" parent="Selection"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0xm2m")
theme_override_font_sizes/font_size = 24
text = "Years"
horizontal_alignment = 1
vertical_alignment = 1

[node name="YearSlider" type="HSlider" parent="Selection"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_vertical = 2
max_value = 10.0
tick_count = 11
ticks_on_borders = true
script = ExtResource("3_1bvp3")

[node name="NumL" type="Label" parent="Selection/YearSlider"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -36.0
offset_right = 19.0
offset_bottom = -13.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_0xm2m")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Selection/YearSlider"]
stream = ExtResource("4_lquwl")
bus = &"sfx"

[node name="FileBtn" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -62.5
offset_top = -223.0
offset_right = 63.5
offset_bottom = -192.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_0xm2m")
theme_override_font_sizes/font_size = 22
text = "Select File..."
script = ExtResource("3_h2yge")

[node name="FilePathL" type="RichTextLabel" parent="FileBtn"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -217.0
offset_top = 13.0
offset_right = 215.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = SubResource("SystemFont_lquwl")
theme_override_fonts/italics_font = SubResource("SystemFont_7mycd")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
autowrap_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="LockBtn" type="Button" parent="FileBtn"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -35.0
offset_top = 82.0
offset_right = 34.0
offset_bottom = 117.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_0xm2m")
theme_override_font_sizes/font_size = 26
text = "SEND"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="FileBtn"]
stream = ExtResource("6_7mycd")
bus = &"sfx"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="FileDialog" type="FileDialog" parent="CanvasLayer"]
unique_name_in_owner = true
oversampling_override = 1.0
title = "Open a File"
file_mode = 0
access = 2
use_native_dialog = true

[node name="LockWindow" type="Window" parent="CanvasLayer"]
oversampling_override = 1.0
initial_position = 2
size = Vector2i(300, 100)
visible = false

[node name="Main" type="Control" parent="CanvasLayer/LockWindow"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BgColor" type="ColorRect" parent="CanvasLayer/LockWindow/Main"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12941177, 0.14901961, 0.18039216, 1)

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/LockWindow/Main"]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_right = 100.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/LockWindow/Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -11.5
offset_right = 32.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_0xm2m")
theme_override_font_sizes/font_size = 20
text = "Sending"

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/LockWindow/Main/Label"]
libraries = {
&"": SubResource("AnimationLibrary_5vw27")
}
autoplay = "sending"

[connection signal="value_changed" from="Selection/MonthSlider" to="Selection/MonthSlider" method="_on_value_changed"]
[connection signal="value_changed" from="Selection/YearSlider" to="Selection/YearSlider" method="_on_value_changed"]
[connection signal="pressed" from="FileBtn" to="FileBtn" method="_on_pressed"]
[connection signal="sent" from="FileBtn" to="." method="_on_file_btn_sent"]
[connection signal="pressed" from="FileBtn/LockBtn" to="FileBtn" method="_on_lock_btn_pressed"]
[connection signal="canceled" from="CanvasLayer/FileDialog" to="FileBtn" method="_on_file_dialog_canceled"]
[connection signal="file_selected" from="CanvasLayer/FileDialog" to="FileBtn" method="_on_file_dialog_file_selected"]
